--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Solana Burn Reactor</title>
+    <title>ChainForge · Burn Module</title>
     <meta
       name="description"
-      content="Strategic token burning for creators and liquidity managers. Burn SPL & Token-2022 tokens safely in one atomic transaction (fee + burn)."
+      content="Burn SPL & Token-2022 tokens safely in one atomic transaction (fee + burn). Deterministic, on-chain verified."
     />
     <meta name="theme-color" content="#0a0a0a" />
 
@@ -16,20 +16,20 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Solana Burn Reactor" />
+    <meta property="og:title" content="ChainForge · Burn Module" />
     <meta
       property="og:description"
-      content="Burn SPL & Token-2022 tokens safely in one atomic transaction (fee + burn)."
+      content="Burn SPL & Token-2022 tokens safely in one atomic transaction (fee + burn). Deterministic, on-chain verified."
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Solana Burn Reactor" />
+    <meta name="twitter:title" content="ChainForge · Burn Module" />
     <meta
       name="twitter:description"
-      content="Burn SPL & Token-2022 tokens safely in one atomic transaction (fee + burn)."
+      content="Burn SPL & Token-2022 tokens safely in one atomic transaction (fee + burn). Deterministic, on-chain verified."
     />
     <meta name="twitter:image" content="/og.png" />
   </head>
